# graduation_work

./: .gitignore  Dockerfile  README.md  config.template  pyproject.toml
.github/workflows/: cd.yml  ci.yml
dags/adhoc/: test_dag.py
dags/el/: engines.py  markets.py  securities.py  securities_to_s3.py
dags/el/securities/: agro.py  imoex.py  inav.py  mmix.py  moex.py  rtsi.py
dags/tests/adhoc/: test_dag_test.py
dags/tests/el/: el__engines.py  el__markets.py  test__el_securities.py
dags/utils/: securities.py
dags/utils/cfg/: configs.py
dags/utils/notifiers/: tg.py
